# gdpr_obfuscator

./: README.md  pyproject.toml
.github/workflows/: checks.yml
obfuscator/: lambda_function.py  main.py
obfuscator/layerdependencies/python/numpy-2.0.2.dist-info/: RECORD
obfuscator/layerdependencies/python/numpy-2.2.4.dist-info/: RECORD
obfuscator/layerdependencies/python/pandas-2.2.3.dist-info/: RECORD
obfuscator/layerdependencies/python/python_dateutil-2.9.0.post0.dist-info/: RECORD
obfuscator/layerdependencies/python/pytz-2025.1.dist-info/: RECORD
obfuscator/layerdependencies/python/six-1.17.0.dist-info/: RECORD
obfuscator/layerdependencies/python/tzdata-2025.1.dist-info/: RECORD
tests/: test_lambda_function.py  test_main.py
