[tool.poetry]
name = "gdpr-obfuscator"
version = "0.1.0"
description = ""
authors = ["SimonH <professional.simonhossain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
moto = "^5.0.28"
boto3 = "^1.36.26"
pandas = "^2.2.3"
pytest = "^8.3.4"
bandit = "^1.7.4"
safety = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

